--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </td>
         <td>
-              <img id=boys src="ahmad.jpeg" alt="boy in a jacket" width="300" height="300">
+              <img id=boys src="https://raw.githubusercontent.com/ahmed-m-nizam/ahmed-m-nizam.github.io/main/ahmad.jpeg" alt="boy in a jacket" width="300" height="300">
 
          </td>
     </tr>
@@ -57,7 +57,7 @@
 <table id=sajeer>
     <tr>
         <td >
-            <img id=boys src="aydin.jpeg" alt="boy in a jacket" width="300" height="300">
+            <img id=boys src="https://raw.githubusercontent.com/ahmed-m-nizam/ahmed-m-nizam.github.io/main/aydin.jpeg" alt="boy in a jacket" width="300" height="300">
         </td>
     </tr>
 </table>
